[gd_scene load_steps=2 format=2]

[ext_resource path="res://player/hud/chatbox.gd" type="Script" id=1]


[node name="Chatbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLog" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 1052.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="SendContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1056.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="PlayerLabel" type="Label" parent="VBoxContainer/SendContainer"]
margin_top = 5.0
margin_right = 51.0
margin_bottom = 19.0
text = "[Player]:"

[node name="Message" type="LineEdit" parent="VBoxContainer/SendContainer"]
margin_left = 55.0
margin_right = 1920.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="text_entered" from="VBoxContainer/SendContainer/Message" to="." method="_on_Message_text_entered"]
